--- a/src/styles/custom/diagram.scss
+++ b/src/styles/custom/diagram.scss
@@ -18,6 +18,7 @@
   }
 
   &__control {
+    cursor: pointer;
     transition: transform $th;
   }
   &__diagrambox {
@@ -33,7 +34,16 @@
   }
   &__textbox {
     width: 100%;
+
     text-align: center;
+  }
+  &__text {
+    font-size: 18px;
+    line-height: 24px;
+    @include bp994-block() {
+      font-size: 30px;
+      line-height: 38px;
+    }
   }
   &__item {
     position: absolute;
@@ -44,8 +54,8 @@
     &_first {
       z-index: 2;
 
-      width: 300px;
-      height: 300px;
+      width: 270px;
+      height: 270px;
       @include bp994-block() {
         width: 450px;
         height: 450px;
@@ -54,8 +64,8 @@
     &_second {
       z-index: 1;
 
-      width: 270px;
-      height: 270px;
+      width: 250px;
+      height: 250px;
       @include bp994-block() {
         width: 390px;
         height: 390px;
