--- a/src/styles/fundamental/page.scss
+++ b/src/styles/fundamental/page.scss
@@ -1,10 +1,9 @@
 .page {
   position: relative;
 
-  overflow-x: hidden;
   &_theme {
     color: $color_light;
-    background: $gradient_bg;
+    background: $gradient__body;
 
     font: 14px / 2.14 'DM Sans', sans-serif;
   }
@@ -86,11 +85,17 @@
   }
   &__section {
     position: relative;
-    z-index: 3;
+    // z-index: 3;
 
     margin-bottom: 50px;
+    &_last {
+      margin-bottom: 0;
+    }
     @include bp994-block() {
       margin-bottom: 50px;
+      &_last {
+        margin-bottom: 0;
+      }
     }
   }
   &__section-bg {
@@ -110,8 +115,9 @@
 
       content: '';
 
-      background: url('/img/bg/bg_big.png') no-repeat;
+      background: url('/img/bg/bg_big_n.png') no-repeat;
       mix-blend-mode: multiply;
+
       background-size: cover;
     }
   }
