inwork: final edits

--- a/src/views/blocks/menu/menu-item.njk
+++ b/src/views/blocks/menu/menu-item.njk
@@ -1,1 +1,1 @@
-<a href="{{ item.href }}" class="menu__item link"><span class="menu__item-text">{{ item.name }}</span></a>
+<a href="#{{ item.href }}" class="menu__item link"><span class="menu__item-text">{{ item.name }}</span></a>
