--- a/src/views/layouts/layout-section-base.njk
+++ b/src/views/layouts/layout-section-base.njk
@@ -1,5 +1,5 @@
 <section class="section page__section {{ inject.sectionClass }}">
-    <div class="section__inner">
+    <div class="section__inner {{ inject.sectionInner }}">
         <div class="layout__{{ inject.wrapper }}">
             {% if inject.sectionTitle %}
                 <div class="section__title title title_main">
