--- a/src/styles/custom/section.scss
+++ b/src/styles/custom/section.scss
@@ -1,7 +1,10 @@
 .section {
   &__inner {
-    // position: relative;
-    // z-index: 3;
+    position: relative;
+    z-index: 1;
+    &_top {
+      z-index: 2;
+    }
   }
   &__title {
     display: flex;
