inwork: final edits v2

--- a/src/views/layouts/layout-section-base.njk
+++ b/src/views/layouts/layout-section-base.njk
@@ -1,4 +1,5 @@
-<section class="section page__section {{ inject.sectionClass }}">
+<section class="section page__section {{ inject.sectionClass }}"
+         id="{{ inject.scrollTo }}">
     <div class="section__inner {{ inject.sectionInner }}">
         <div class="layout__{{ inject.wrapper }}">
             {% if inject.sectionTitle %}
