--- a/src/styles/custom/map-row.scss
+++ b/src/styles/custom/map-row.scss
@@ -133,19 +133,22 @@
   &__deco {
     position: relative;
     height: 100%;
-    &::after {
-      position: absolute;
-      top: calc(50% - 4px);
-      left: -25px;
 
-      width: 262.5px;
-      height: 48.5px;
+    @include bp994-block() {
+      &::after {
+        position: absolute;
+        top: calc(50% - 4px);
+        left: -25px;
 
-      content: '';
+        width: 262.5px;
+        height: 48.5px;
 
-      border-top: 4px solid $color_light;
-      border-right: 4px solid $color_light;
-      border-top-right-radius: 60px;
+        content: '';
+
+        border-top: 4px solid $color_light;
+        border-right: 4px solid $color_light;
+        border-top-right-radius: 60px;
+      }
     }
   }
 }
@@ -161,10 +164,12 @@
   //   }
   // }
   .map-row__deco {
-    &::after {
-      transform: scale(-1, 1);
-      left: auto;
-      right: -25px;
+    @include bp994-block() {
+      &::after {
+        transform: scale(-1, 1);
+        left: auto;
+        right: -25px;
+      }
     }
   }
   .map-row__span {
