inwork: final edits v3

--- a/src/views/blocks/diagram/diagram.njk
+++ b/src/views/blocks/diagram/diagram.njk
@@ -13,8 +13,8 @@
                     <circle class="diagram__circle diagram__circle_first" stroke-dasharray="310,345.4" stroke="url(#gradient-first)" fill="none" cx="90" cy="90" r="55" />
                     <defs>
                     <linearGradient id="gradient-first" x1="0%" y1="0%" x2="0%" y2="100%" gradientTransform="rotate(70)">
-                    <stop offset="0%" stop-color="#031F31" />
-                    <stop offset="80%" stop-color="#399CDC" />
+                    <stop offset="0%" stop-color="#000f46" />
+                    <stop offset="80%" stop-color="#001e8d" />
                     </linearGradient>
                     </defs>
                 </svg>
