--- a/src/views/pages/index.njk
+++ b/src/views/pages/index.njk
@@ -30,7 +30,7 @@
     {% set inject = {
     wrapper: 'slim',
     sectionTitle: 'Holders benefits',
-    sectionClass: '',
+    sectionClass: 'page__section_offset',
     scrollTo: 'benefit',
     deco: true
     } %}
