--- a/src/styles/custom/about.scss
+++ b/src/styles/custom/about.scss
@@ -3,4 +3,10 @@
     display: flex;
     flex-wrap: wrap;
   }
+  &__deco {
+    margin: 0 auto 25px;
+    @include bp994-block() {
+      margin: 0 auto 50px;
+    }
+  }
 }
