--- a/src/views/blocks/about/about.njk
+++ b/src/views/blocks/about/about.njk
@@ -15,6 +15,9 @@
                 to the NFT holders
             </div>
         </div>
+        <div class="about__deco">
+            <img src="/img/icons/icon__flower.svg" alt="" class="deco__pattern img" />
+        </div>
         <div class="section__text paragraph">
             <p class="paragraph__item">
                 <span class="deco__w deco__w_700">MetaHelix</span> is a Discord-based technology platform built from the ground up for <span class="deco__w deco__w_700">NFT</span> communities, providing a suite of powerful utilities and tools for projects to empower their <span class="deco__w deco__w_700">Web3</span> communities, with an effortless plug-and-play setup.
