--- a/src/views/blocks/feature/feature.njk
+++ b/src/views/blocks/feature/feature.njk
@@ -6,7 +6,7 @@
             {% endfor %}
         </div>
         <div class="feature__text section__text">
-            <div class="title title_main section__title">
+            <div class="title title_main section__title feature__title">
                 <div class="title__text">And so much more..</div>
             </div>
             <div class="paragraph">
