--- a/src/views/pages/index.njk
+++ b/src/views/pages/index.njk
@@ -22,7 +22,7 @@
     {% include "sections/about-section.njk" %}
     {% set inject = {
     wrapper: 'wrap',
-    sectionTitle: 'Feature',
+    sectionTitle: 'Features',
     sectionClass: '',
     deco: true
     } %}
