--- a/src/styles/kit/button.scss
+++ b/src/styles/kit/button.scss
@@ -2,6 +2,7 @@
   position: relative;
 
   display: inline-flex;
+  overflow: hidden;
 
   align-items: center;
 
@@ -14,7 +15,7 @@
   user-select: none;
   white-space: nowrap;
   text-decoration: none;
-  overflow: hidden;
+
   color: #fff;
 
   outline: 0;
@@ -26,33 +27,45 @@
     bottom: 0;
     left: 0;
 
+    overflow: hidden;
+
     width: 100%;
     height: 100%;
 
     content: '';
 
-    @include ts(opacity);
     background: $color_gray;
+    border-radius: 32px;
+
+    @include bp994-block() {
+      border-radius: 85px;
+    }
+
+    @include ts(opacity);
   }
   &::after {
-    opacity: 0;
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
 
+    overflow: hidden;
+
     width: 100%;
     height: 100%;
 
     content: '';
 
-    @include ts(opacity);
+    opacity: 0;
     background: $gradient_bg_light;
+
+    @include ts(opacity);
   }
   & .button__text {
     position: relative;
     z-index: 1;
+
     display: inline-block;
     overflow: hidden;
 
@@ -137,9 +150,15 @@
 
   font-size: 22px;
   line-height: 22px;
+  &::after {
+    border-radius: 32px;
+  }
   @include bp994-block() {
     border-radius: 85px;
 
+    &::after {
+      border-radius: 85px;
+    }
     font-size: 30px;
     line-height: 30px;
   }
