--- a/src/views/blocks/about/about.njk
+++ b/src/views/blocks/about/about.njk
@@ -6,14 +6,11 @@
         </div>
         <div class="section__cell">
             <div class="section__number">300,000+</div>
-            <div class="section__about">users being verified</div>
+            <div class="section__about">users verified</div>
         </div>
         <div class="section__cell">
             <div class="section__number">2,500+</div>
-            <div class="section__about">
-                SOL was already airdropped
-                to the NFT holders
-            </div>
+            <div class="section__about">SOL airdropped</div>
         </div>
         <div class="about__deco">
             <img src="/img/icons/icon__flower.svg" alt="" class="deco__pattern img" />
