--- a/src/views/pages/index.njk
+++ b/src/views/pages/index.njk
@@ -14,7 +14,7 @@
     {% include "sections/banner-section.njk" %}
     {% set inject = {
     wrapper: 'wrap',
-    sectionTitle: 'About',
+    sectionTitle: 'Why MetaHelix?',
     sectionClass: '',
     scrollTo: 'about',
     deco: true
@@ -38,7 +38,7 @@
     <div class="page__section-bg">
         {% set inject = {
         wrapper: 'slim',
-        sectionTitle: 'Tokenomics',
+        sectionTitle: 'Mint details',
         sectionClass: '',
         scrollTo: 'token',
         deco: true
