--- a/src/styles/fundamental/page.scss
+++ b/src/styles/fundamental/page.scss
@@ -103,6 +103,7 @@
 
     margin-top: -700px;
     padding-top: 700px;
+    padding-bottom: 50px;
     @include bp994-block() {
       margin-top: -400px;
       padding-top: 400px;
